fixed picture stretch, embiggened carousel

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
 
 .headline-text {
   height: auto;
-  width: 75%;
+  max-width: 75%;
   margin: auto;
   display: block;
   flex-direction: column;
@@ -87,6 +87,7 @@ button {
   border-top-left-radius: 20%;
   border-top-right-radius: 20%;
   border-bottom-right-radius: 20%;
+  object-fit: cover;
 }
 
 .slider {
@@ -167,7 +168,7 @@ button {
 .work-button {
   font-family: 'Overpass', sans-serif;
   font-weight: 700;
-  font-size: calc(4px + 1vmin);
+  font-size: calc(8px + 1vmin);
   grid-area: work-button;
   padding: 12px 25px;
   border-radius: 15px;
